mule-fundamentals/v/3.5/basic-studio-tutorial.adoc
= Basic Studio Tutorial

image:mulestudio%281%29.png[mulestudio%281%29]This exercise is designed to introduce you to Anypoint™ Studio and help you get comfortable building applications.

This tutorial walks you through how to use Anypoint Studio to build a simple HTTP request-response application. After creating and running the example locally, you will be able to apply what you have learned to create link:/mule-fundamentals/v/3.5/content-based-routing-tutorial[more complex applications].

== Assumptions

This tutorial assumes that you have link:/mule-fundamentals/v/3.5/download-and-launch-anypoint-studio[downloaded and installed Anypoint Studio]. If you do not have any previous experience with Eclipse or an Eclipse-based IDE, please review the brief introduction to the link:/mule-fundamentals/v/3.5/anypoint-studio-essentials[Anypoint Studio interface].

== Goals

In this tutorial, your goals are to:

. Create an application in Anypoint Studio containing a single flow that  +
* receives an HTTP request 
* logs the message payload 
* returns a modified payload as an HTTP response
. Run the application on a local runtime embedded in Anypoint Studio.
. Test the application using your browser. 
. Stop the application.
. Edit the application and rerun it.
. _(Optional)_ Apply your knowledge to an extra credit challenge.

==== ~<<~Skip to the code~>>~

== Launching Studio

If you have already launched Studio as part of the installation process, and it is now running, skip the rest of this section and proceed directly to <<Creating a New Project>>.

. Navigate to the directory on your local drive in which you installed Studio.
. Double-click the executable file to launch Studio. +
* `AnypointStudio.exe` in Windows
* `AnypointStudio.app` in Mac OS
* `AnypointStudio` in Linux

. When Studio presents the *Workspace Launcher* dialog, click *OK* to accept the default workspace.  +
 +
image:workspacelauncher.png[workspacelauncher] +
+
. If this is the first time you have launched Studio, you may see a *Welcome* screen. Click *Create a Project* to dismiss the screen and jump straight to the New Mule Project wizard.  +
 +
image:WelcomeScreen.png[WelcomeScreen] +

== Creating a New Project

. Unless the New Project Wizard is already open, click *File* > *New* > *Mule Project*.
. Studio opens the *New Mule Project* wizard. Fill in the *Name* field with the value Basic Tutorial.
. Select the *Server Runtime* to which you will want to deploy your project. Anypoint Studio automatically populates the Server Runtime field with a default server that comes bundled with your download. You can change to a different runtime if you have others installed – this project works with any runtime. For more about installing additional runtime versions, see link:/mule-user-guide/v/3.5/installing-extensions[Installing Extensions]. +
 +
image:newProject.png[newProject] +
+
. Click *Finish* to create the project.
. In the *Package Explorer*, `Basic Tutorial.xml` appears inside the `src/main/app` folder.  +
 +
image:packageexplorer.png[packageexplorer] +

The `.xml` file stores flow information for the visual editor. When your new project opens for the first time, Mule Studio automatically opens the `.xml file` and presents you with a blank canvas. +
 +
image:ThisisStudio.png[ThisisStudio]

Find out more about the .mflow and mule-project.xml files

[TIP]
====
The *mule-project.xml* file is the Mule project descriptor file. Open this file to change the project runtime, set or edit environment variables, or edit the project description. Commit this file, along with your <name>.xml file to your source control systems to avoid errors when sharing your project.
====

== Modeling a Mule Flow

In this tutorial, your goal is to build an application that receives an HTTP request, logs the message payload, and then modifies the payload before returning it as an HTTP response. You can build this application using three building blocks in Studio:

[%autowidth.spread]
|===
|*link:/mule-user-guide/v/3.5/http-connector[HTTP Connector]* |Allows your Mule application to connect to Web resources through the HTTP or HTTPS protocol. Find this in the Connectors section of the palette.  
|*link:/mule-user-guide/v/3.5/logger-component-reference[Logger Component]* |Logs messages or activity based on the value of a Mule expression. Find this in the Components section of the palette.
|*link:/mule-user-guide/v/3.5/set-payload-transformer-reference[Set Payload Transformer]* |Modifies your payload into a "Hello, World" message. Find this in the Transformers section of the palette.
|===

Drag and drop these three building blocks into place on the canvas to visually construct, or model, your flow, in the order shown:

image:basictutorialflow1.png[basictutorialflow1]

More detailed instructions

[TIP]
====
If necessary, consult this link:/mule-fundamentals/v/3.5/anypoint-studio-essentials[quick overview] on how to use the visual editor to drag and drop building blocks from the palette onto the canvas.

Or, follow this step-by-step guide to model the flow for this example.

. Click and drag an *HTTP Connector* from the Connectors section of the palette onto the canvas. +

+
image:basictutoralflow1a.png[basictutoralflow1a] +
+

. Click and drag a *Logger* from the Components section of the palette and drop it to the right of the HTTP endpoint on the canvas. +

+
image:basictutorialflow1b.png[basictutorialflow1b] +
+

 . Lastly, place a *Set Payload* transformer immediately to the right of the Logger component, making sure to drop it inside the dashed line area. +

+
image:basictutorialflow1c.png[basictutorialflow1c]
====

[TIP]
====
*Tip: Use the Palette Filter*

image:Studio_Palette_filter.png[Studio_Palette_filter]


Note that building blocks in each category of the palette are organized alphabetically. To avoid scrolling, use the Filter tool in the upper right corner of the palette to find the building blocks that you want more quickly.
====

With just a few clicks, you have modeled your entire application on the Studio canvas.

Once you configure the individual elements within it, which you will do in the next section, this flow will accomplish the goals that you set out to achieve with this application. Each building block that you selected and placed on the canvas will perform part of the functionality of your application, as shown in the image below.

image:Studio_basictutorial_flow1_annotated2.png[Studio_basictutorial_flow1_annotated2]

== Configuring the Flow Elements

Nearly all Mule elements provide configuration options, which you can set in one of two ways:

* via the building block *Properties* tabs in Studio's visual editor
* via XML code in Studio's *XML* editor

The following instructions introduce you to configuring in both editors.

. Click the HTTP building block in your flow to open its link:/mule-user-guide/v/3.5/the-properties-editor[Properties Editor]. By default, the endpoint is set to the request-response exchange pattern. This means that Mule returns a response to the endpoint after processing is complete in the flow. By default, *Host* is set to `localhost` and *Port* to `8081.` +
 +
image:HTTP-unconfig.png[HTTP-unconfig]

. Click *Configuration XML* at the bottom of the canvas to switch to the XML editor view. +

+
image:canvas_tabs_xml.png[canvas_tabs_xml] +
+

Observe that the default configurations shown on the Message Flow canvas and the Configuration XML view are the same:
+

[source, xml, linenums]
----
<http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="HTTP"/>
----

+
The `doc:name` attribute corresponds to the display name that appears underneath the building block icon on the Message Flow canvas. 
. Still in the XML configuration view, change the value of the port attribute to `8084`. 
. Click *Message Flow* to switch back to the visual editor. +

+
image:canvas_tabs_flow.png[canvas_tabs_flow]  
+

. Click the *HTTP* building block to reopen its Properties Editor, and note that the *Port* field now reflects the updated value of `8084`. You can change this value in either editor; Studio's two-way editor automatically updates the configuration as you switch back and forth. +

+
image:http8084.png[http8084] +
+

. Click the *Logger* building block to switch the Properties Editor to the Logger component.
. In the *Message* field, enter:` Current payload is #[payload]`.  +

+
image:loggerpayload.png[loggerpayload] +
+

The string `#[payload]` is a simple link:/mule-user-guide/v/3.5/mule-expression-language-mel[Mule expression] which evaluates to the current payload of the message as it passes this point in the flow. Including this message here instructs Mule to log this information in the application log files, which can be useful in more complex use cases, when you need to track the payload at different points in your flow.
. Click the *Set Payload* building block to switch the Properties Editor to the Set Payload transformer.
. Notice that the Value field contains these characters: **#[]**  +

+
image:setpayloadex.png[setpayloadex] +
+

This indicates that this field supports link:/mule-user-guide/v/3.5/mule-expression-language-mel[Mule expressions], which take the form of a string enclosed with `#[]`. If you enter a Mule expression here, Mule evaluates it at runtime and returns or uses the results for further processing. Note that this field also accepts literals, so you can enter any string here to instruct Mule to set that string as your new payload. In this tutorial, however, you will use an expression to create a dynamic message.
. In the *Value* field, enter the following: +
  +
`#['Hello, ' + payload + '. Today is ' + server.dateTime.format('dd/MM/yy') + '.'` ] +

+
image:setpayloadconfig.png[setpayloadconfig]
+

[WARNING]
Note that **`payload`** and **`server.dateTime.format('dd/MM/yy')`** are both Mule expressions. Because you are entering them within a larger Mule expression, the `#[]` syntax is not required around these individual expressions. Anything that you enter inside of the `#[]` syntax which is _not_ a Mule expression must be enclosed with quotes so that Mule reads it as a string.

. Save your application by clicking *File* > *Save*.

Your complete application XML, once configured, should look like the following:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.5.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd">
 
    <flow name="basic_tutorialFlow1" doc:name="basic_tutorialFlow1">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8084" doc:name="HTTP"/>
        <logger message="Current payload is #[payload]" level="INFO" doc:name="Logger"/>
        <set-payload value="#['Hello, ' + payload + '. Today is ' + server.dateTime.format('dd/MM/yy') + '.' ]" doc:name="Set Payload"/>
    </flow>
</mule>
----

== Running the Application

Having built, configured, and saved your new application, you are ready to run it on the embedded Mule server (included as part of the bundled download of Anypoint Studio).

. In the *Package Explorer* pane, right-click project name, then select *Run As* > *Mule Application*. (If you have not already saved, Mule prompts you to save now.) +
 +
image:bst-run.png[bst-run] +
+

. Mule immediately kicks into gear, starting your application and letting it run. When the startup process is complete, Studio displays a message in the console that reads, `Started app 'basic_tutorial'`. +
 +
image:BasicTutorial_Console_started.png[BasicTutorial_Console_started]

== Using the Application

. Open any Web browser, then navigate to` http://localhost:8084/world`
. Your browser presents a message that reads,  `Hello, /world. Today is [today's date].`
. In your browser’s address bar, replace the word `world` with your own name, then press *enter*.
. Your browser presents the same message, but includes your name instead of "world".  +

+
image:BasicTutorial_Browser.png[BasicTutorial_Browser] +
+

. Next, check your console in Anypoint Studio to verify that Mule logged the payload before the message reached the expression transformer. 
. Place your cursor in the console window, press CTRL+F or COMMAND+F to open a Find dialog, then search for `Current payload`. Look for results corresponding to the payloads that you entered in your browser. For example:  +
 +
`INFO  2013-08-21 09:22:26,446 [[basic_tutorial].connector.http.mule.default.receiver.02] org.mule.api.processor.LoggerMessageProcessor: Current payload is /Aaron` +
You may also see some other results for a payload of "`/favicon.ico`". These results are automatically generated by your browser.

You can filter out these results in the <<Editing the Application>> section, below.

Congratulations! You've run and tested your application!

* You submitted a request to the inbound endpoint of your application via your Web browser. 
* The Mule application received your request and logged the payload (whatever you typed after `http://localhost:8084/`) to the console. 
* The application then sent the message on to the Set Payload transformer, which transformed the payload per its instructions, then returned the results to your HTTP endpoint. 

== Stopping the Application

To stop the application, click the red, square *Terminate* icon above the console panel.  +
 +
image:stopbasictutorial.png[stopbasictutorial]

== Editing the Application

You may have noticed that your browser inserts an additional payload of "`/favicon.ico`" upon each refresh. You can add a filter element into your flow to exclude these payloads. Here's how:

. Drag and drop an *Expression Filter* from the Filters section of the palette onto your canvas, positioning it between the HTTP endpoint and the Logger. +

+
image:Studio_BasicTutorial_Flow_ExpressionFilter.png[Studio_BasicTutorial_Flow_ExpressionFilter] +
+

. Click the Expression Filter to open its properties tab and enter the following in the *Expression* field:  +
`#[payload != '/favicon.ico']` +
 +
image:faviconfilter.png[faviconfilter] +
+

This expression tells Mule to check that the payload _is not equal to_ the string '/favicon.ico'. If the expression evaluates to true, Mule passes the message on to the next step in the flow. If the expression evaluates to false, Mule stops processing the message.
. Save your application and run it again. (Right-click the project name in your Package Explorer, then click *Run As* > *Mule Application*.*)*
. Wait for the message in the console that reads, `Started app 'basic_tutorial'`.
. Return to your Web browser and go to` http://localhost:8084/world`
. Replace `world` with another word of your choice and refresh. Repeat this step several times with different words.
. Check the logged payloads in your console: place your cursor in the console window, press CTRL+F or COMMAND+F to open a Find dialog, then search for `Current payload`.
. All payloads that you see should correspond to the words you entered in your browser, and `/favicon.ico` should no longer be included. 

Your complete application XML, once edited, should look like the following:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.5.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd">
    <flow name="basic_tutorialFlow1" doc:name="basic_tutorialFlow1">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8084" doc:name="HTTP"/>
        <expression-filter expression="#[payload != '/favicon.ico']" doc:name="Expression"/>
        <logger message="Current payload is #[payload]" level="INFO" doc:name="Logger"/>
        <set-payload value="#['Hello, ' + payload + '. Today is ' + server.dateTime.format('dd/MM/yy') + '.' ]" doc:name="Set Payload"/>
    </flow>
</mule>
----

== Extra Credit

Now that you know your way around Anypoint Studio, try applying your knowledge to an extra task. Revise your application so that, in addition to returning the transformed payload as an HTTP response in your browser as it does now, Mule also:

. logs the unique message id that Mule automatically assigns to each message that passes through a flow
. writes the message payload that you see in your browser to a new .txt file on your local drive 
. names each .txt file using the message id

To achieve this, you'll need to add another message processor to your flow to direct Mule to write your payload to a link:/mule-user-guide/v/3.5/file-connector[file]. You'll also need to use another Mule expression that you haven't seen before in order to log and use the link:/mule-user-guide/v/3.5/mule-expression-language-reference[unique message id]. Use the hints below if you need help.


==== ~image:icon-question-blue-big.png[icon-question-blue-big%281%29]~ Hints

*How do I log the message id?*
[TIP]
====
The Mule expression that resolves to the unique message id of the current message is `#[message.id]`
====

*How do I write to a file?*

[TIP]
====
Try adding a link:/mule-user-guide/v/3.5/file-connector[File Connector] after the Set Payload transformer in your flow. 
====

*How do I name a text file using the message id?*

[TIP]
====
Fill in the *Output Pattern* field in the File Endpoint to tell Mule how to name the file and what file type to use. Note that you can use the same Mule expression here that you used to log the message id.
====


=== Answer


There is more than one way to achieve the goals outlined above, but the following describes the quickest way.

. Click on your existing *Logger* component to open its properties tab. 
. Revise the *Message* field to read: +
`Current payload is #[payload] and message id is #[message.id]` +
 +
(If you prefer, you can instead use a new Logger component to log the message id in a separate step. If you choose to do this, the second Logger component can be placed anywhere in the flow after the Expression filter.)
. Drag and drop a *File Endpoint* onto your canvas, immediately after the Set Payload transformer. +

+
image:Studio_BasicTutorial_ExtraCreditFlow.png[Studio_BasicTutorial_ExtraCreditFlow] +
+
. Click on the *File Endpoint* to open the Properties editor.
. Enter a *Path* where you want Mule to create a file. For example: `/Applications/anypointStudio/examples/BasicTutorial`
. Enter an Output Pattern that defines the file name and type, as follows:  +
`#[message.id].txt`
+
 View the code of the revised application
. Save your application, then run it again. (Right-click *Basic Tutorial.xml* in your Package Explorer, then click *Run As* > *Mule Application*.*)*
. Wait for the message in the console that reads, `Started app 'basic_tutorial'`.
. Return to your Web browser and go to` http://localhost:8084/world`
.Replace `world` with another word of your choice and refresh.
.Check your console, using the Find command, for the logged payload and message id to confirm that Mule has logged both successfully for each message you have initiated using the browser.
.Navigate to the folder on your local drive that you defined in Step 5, above. 
.Your folder should contain .txt files. Open each .txt file and confirm that:  +
. the payload matches what you observed in your browser  
. the file name corresponds to the message id logged in your console

Congratulations! You earned your extra credit. You're all set to go on to the link:/mule-fundamentals/v/3.5/content-based-routing-tutorial[Content-Based Routing Tutorial].


== See Also

* *NEXT STEP:* Continue the hands-on learning experience with the link:/mule-fundamentals/v/3.5/content-based-routing-tutorial[Content-Based Routing Tutorial].
* Want to learn more about Mule Expression Language (MEL)? Check out the link:/mule-user-guide/v/3.5/mule-expression-language-mel[complete reference].
* Get a deeper explanation about the Mule message and anatomy of a Mule flow in link:/mule-fundamentals/v/3.5/mule-concepts[Mule Concepts].
* Want to try a Hello World example using link:/runtime-manager/cloudhub[CloudHub] instead? Check out link:/runtime-manager/hello-world-on-cloudhub[Hello World on CloudHub].
